--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-       
+![steve](https://user-images.githubusercontent.com/79880875/216216957-4a4cd0a1-8166-45ef-958b-751a4b6ef16e.jpg)
+  
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
