--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,25 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-![steve](https://user-images.githubusercontent.com/79880875/216216957-4a4cd0a1-8166-45ef-958b-751a4b6ef16e.jpg)
-  
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
-
-     
+        
+https://user-images.githubusercontent.com/79880875/216216957-4a4cd0a1-8166-45ef-958b-751a4b6ef16e.jpg
+        
+        {% if site.show_downloads %}
+        <ul class="downloads">
+          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+        </ul>
+        {% endif %}
+      </header>
+      <section>
 
       {{ content }}
 
