--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
         
-https://user-images.githubusercontent.com/79880875/216216957-4a4cd0a1-8166-45ef-958b-751a4b6ef16e.jpg
+![steve](https://user-images.githubusercontent.com/79880875/216216957-4a4cd0a1-8166-45ef-958b-751a4b6ef16e.jpg)
         
         {% if site.show_downloads %}
         <ul class="downloads">
